--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='utf-8'>
 <title>Stopwatch</title>
-<link rel="stylesheet" href="https://fumipon311.github.io/timecss/style.css"/type="text/css">
+<link rel="stylesheet" href="https://fumipon311.github.io/stopwatch/set.css"/type="text/css">
 </head>
 <body>
   <h1>ストップウォッチ</h1>
