--- a/index.html
+++ b/index.html
@@ -20,14 +20,10 @@ const startButton = document.getElementById('start');
 const stopButton = document.getElementById('stop');
 const resetButton = document.getElementById('reset');
 
-// 開始時間
 let startTime;
-// 停止時間
 let stopTime = 0;
-// タイムアウトID
 let timeoutID;
 
-// 時間を表示する関数
 function displayTime() {
   const currentTime = new Date(Date.now() - startTime + stopTime);
   const m = String(currentTime.getMinutes()).padStart(2, '0');
@@ -38,6 +34,9 @@ function displayTime() {
   timeoutID = setTimeout(displayTime, 10);
 }
 
+<button id="stop" disabled>stop</button>
+<button id="reset" disabled>reset</button>
+    
 startButton.addEventListener('click', () => {
   startButton.disabled = true;
   stopButton.disabled = false;
