--- a/index.html
+++ b/index.html
@@ -26,18 +26,16 @@ let timeoutID;
 
 function displayTime() {
   const currentTime = new Date(Date.now() - startTime + stopTime);
+  const h = String(currentTime.getMinutes()).padStart(2, '0');
   const m = String(currentTime.getMinutes()).padStart(2, '0');
   const s = String(currentTime.getSeconds()).padStart(2, '0');
-  const ms = String(currentTime.getMilliseconds()).padStart(2, '0');
+  const ms = String(currentTime.getMilliseconds()).padStart(3, '0');.slice(0,2)
 
   time.textContent = `${m}:${s}:${ms}`;
   timeoutID = setTimeout(displayTime, 10);
 }
-
-<button id="stop" disabled>stop</button>
-<button id="reset" disabled>reset</button>
     
-startButton.addEventListener('click', () => {
+startButton.addEventListener('mousedown', () => {
   startButton.disabled = true;
   stopButton.disabled = false;
   resetButton.disabled = true;
@@ -45,7 +43,7 @@ startButton.addEventListener('click', () => {
   displayTime();
 });
 
-stopButton.addEventListener('click', function() {
+stopButton.addEventListener('mousedown', function() {
   startButton.disabled = false;
   stopButton.disabled = true;
   resetButton.disabled = false;
@@ -53,7 +51,7 @@ stopButton.addEventListener('click', function() {
   stopTime += (Date.now() - startTime);
 });
 
-resetButton.addEventListener('click', function() {
+resetButton.addEventListener('mousedown', function() {
   startButton.disabled = false;
   stopButton.disabled = true;
   resetButton.disabled = true;
