--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <input id="start" type="button" value="スタート">
       <input id="stop" type="button" value="ストップ">
       <input id="reset" type="button" value="リセット">
+      <button type="button" id="stop" disabled>ストップ</button>
+      <button type="button" id="reset" disabled>リセット</button>
     </div>
   </div>  
   <script>
