--- a/index.html
+++ b/index.html
@@ -10,24 +10,27 @@
     <div id="time">00:00:00</div>
     <div id="buttons">
       <input id="start" type="button" value="スタート">
-      <input id="stop" type="button" value="ストップ"  disabled>ストップ</button>
-      <input id="reset" type="button" value="リセット" disabled>リセット</button>
+      <input id="stop" type="button" value="ストップ"  disabled>
+      <input id="reset" type="button" value="リセット" disabled>
      
     </div>
   </div>  
   <script>
-    const time = document.getElementById('time');
+const time = document.getElementById('time');
 const startButton = document.getElementById('start');
 const stopButton = document.getElementById('stop');
 const resetButton = document.getElementById('reset');
 
+// 開始時間
 let startTime;
+// 停止時間
 let stopTime = 0;
+// タイムアウトID
 let timeoutID;
 
 function displayTime() {
   const currentTime = new Date(Date.now() - startTime + stopTime);
-  const h = String(currentTime.getMinutes()).padStart(2, '0');
+  const h = String(currentTime.getHours()-1).padStart(2, '0');
   const m = String(currentTime.getMinutes()).padStart(2, '0');
   const s = String(currentTime.getSeconds()).padStart(2, '0');
   const ms = String(currentTime.getMilliseconds()).padStart(3, '0');.slice(0,2)
