--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function displayTime() {
   const h = String(currentTime.getHours()-1).padStart(2, '0');
   const m = String(currentTime.getMinutes()).padStart(2, '0');
   const s = String(currentTime.getSeconds()).padStart(2, '0');
-  const ms = String(currentTime.getMilliseconds()).padStart(3, '0');.slice(0,2)
+  const ms = String(currentTime.getMilliseconds()).padStart(3, '0').slice(0,2);
 
   time.textContent = `${m}:${s}:${ms}`;
   timeoutID = setTimeout(displayTime, 10);
